@@ -1,18 +1,0 @@
-// Gdk.Color.custom - Gdk Color class customizations
-//
-// Authors:
-// 	Gonzalo Paniagua Javier (gonzalo@ximian.com)
-//
-// (c) 2003 Ximian, Inc. (gonzalo@ximian.com)
-//
-// This code is inserted after the automatically generated code.
-
-
-[DllImport("libgdk-win32-2.0-0.dll")]
-static extern bool gdk_colormap_alloc_color(IntPtr raw, ref Gdk.Color color, bool writeable, bool best_match);
-
-public bool AllocColor (ref Gdk.Color color, bool writeable, bool best_match)
-{
-	return gdk_colormap_alloc_color (Handle, ref color, writeable, best_match);
-}
-
