@@ -13,7 +13,11 @@
   <attr path="//class[@cname='GdkPointer_']/method[@name='Grab']/*/*[@name='confine_to']" name="null_ok">1</attr>
   <attr path="//class[@cname='GdkPointer_']/method[@name='Grab']/*/*[@name='cursor']" name="null_ok">1</attr>
   <attr path="//object[@cname='GdkBitmap']" name="parent">GdkDrawable</attr>
-  <attr path="//object[@cname='GdkColormap']/method[@name='AllocColor']" name="hidden">1</attr>
+  <attr path="//object[@cname='GdkColormap']/method[@name='AllocColor']/*/*[@type='GdkColor*']" name="pass_as">ref</attr>
+  <attr path="//object[@cname='GdkColormap']/method[@name='AllocColors']/*/*[@type='GdkColor*']" name="array">1</attr>
+  <attr path="//object[@cname='GdkColormap']/method[@name='AllocColors']/*/*[@name='success']" name="array">1</attr>
+  <attr path="//object[@cname='GdkColormap']/method[@name='QueryColor']/*/*[@type='GdkColor*']" name="pass_as">ref</attr>
+  <attr path="//object[@cname='GdkColormap']/method[@name='FreeColors']/*/*[@type='GdkColor*']" name="array">1</attr>
   <attr path="//object[@cname='GdkDrawable']/method[@name='DrawLines']" name="hidden">1</attr>
   <attr path="//object[@cname='GdkDrawable']/method[@name='DrawPolygon']" name="hidden">1</attr>
   <attr path="//object[@cname='GdkDrawable']/method[@name='GetSize']/*/*[@type='gint*']" name="pass_as">out</attr>
