@@ -1,3 +1,9 @@
+2003-12-08  Luciano M. <martorella@sssup.it>
+
+	* gdk/Gdk.metadata : ref/array tags
+	* gdk/Colormap.custom : removed
+	* gdk/gdk-api.xml : regen
+
 2003-12-08  Mike Kestner  <mkestner@ximian.com>
 
 	* generator/Signal.cs : add virtual method generation for the 
